--- a/_pages/map.html
+++ b/_pages/map.html
@@ -1,4 +1,14 @@
+---
+layout: archive
+title: "Visiters"
+permalink: /map/
+author_profile: true
+---
 
-
+{% if site.talkmap_link == true %}
 
 <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=XZNAItuzHF8ooxdvTemUFQKUpsmSecnr8ZEGBcWv2Go&cl=ffffff&w=a"></script>
+
+{% endif %}
+
+
