--- a/_pages/map.html
+++ b/_pages/map.html
@@ -1,12 +1,15 @@
 ---
-layout: archive
+layout: single
 title: "Visiters"
 permalink: /map/
 author_profile: true
 ---
 
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=XZNAItuzHF8ooxdvTemUFQKUpsmSecnr8ZEGBcWv2Go&cl=ffffff&w=a"></script>
-
-
-
+{% raw %}
+<div style="text-align:center;">
+  <script type="text/javascript" id="clustrmaps"
+    src="https://clustrmaps.com/map_v2.js?d=XZNAItuzHF8ooxdvTemUFQKUpsmSecnr8ZEGBcWv2Go&cl=ffffff&w=a">
+  </script>
+</div>
+{% endraw %}
