--- a/_pages/map.html
+++ b/_pages/map.html
@@ -5,11 +5,12 @@ permalink: /map/
 author_profile: true
 ---
 
+<h2 style="text-align:center;">Visitors Map</h2>
 
-{% raw %}
 <div style="text-align:center;">
+{% raw %}
   <script type="text/javascript" id="clustrmaps"
     src="https://clustrmaps.com/map_v2.js?d=XZNAItuzHF8ooxdvTemUFQKUpsmSecnr8ZEGBcWv2Go&cl=ffffff&w=a">
   </script>
-</div>
 {% endraw %}
+</div>
